--- a/A01369984_W2.ipynb
+++ b/A01369984_W2.ipynb
@@ -129,13 +129,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "> ###### **RESPUESTA**"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
@@ -344,6 +337,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "**EL HISTOGRAMA MUETRA UNA DISTRIBUCIÓN NORMAL, SE OBSERVA QUE SE TIENE UNA MAYOR CANTIDAD DE VALORES EN 20**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Reto\n",
     "\n",
     "Instrucciones:\n",
@@ -353,13 +353,6 @@
     "*¿QUÉ PUEDE VER EN EL HISTOGRAMA ANTERIOR? ¿EL HISTOGRAMA DE LOS MEDIOS DE MUESTRA DE UNA VARIABLE ALEATORIA UNIFORME SE PARECE A UNA VARIABLE DISTRIBUIDA UNIFORME? ¿VE UNA LÓGICA? EXPLIQUE BREVEMENTE LO QUE PIENSA.*\n",
     "\n",
     "*¿QUÉ VES? ¿EN QUÉ SE DIFERENCIA EL HISTOGRAMA DE X DEL HISTOGRAMA DE LAS MUESTRAS DE X?*"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "> ###### **RESPUESTA**"
    ]
   },
   {
@@ -417,6 +410,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "**EL HISTOGRAMA MUETRA UNA DISTRIBUCIÓN NORMAL, SE OBSERVA QUE SE TIENE UNA MAYOR CANTIDAD DE VALORES EN 20**\n",
+    "**A DIFERENCIA DEL HISTOGRAMA ANTERIOR ESTE MUESTRA UN RANGO MÁS AMPLIO AL TENER VALORE DE ENTRE -10 A 50M MIENTRAS QUE EL ANTERIOR SE ENCUENTRA ENTRE 12.5 A 27.5**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Reto\n",
     "\n",
     "Instrucciones:\n",
@@ -424,13 +425,6 @@
     "*CALCULE LA MEDIA Y LA DESVIACIÓN ESTÁNDAR DE ESTA VARIABLE ALEATORIA Y. ¿QUÉ TAN SIMILARES O DIFERENTES SON ESTOS VALORES DE LA MEDIA Y DESVIACIÓN ESTÁNDAR DE LA MEDIA TEÓRICA (20) Y LA DESVIACIÓN ESTÁNDAR TEÓRICA (10)?*\n",
     "\n",
     "*¿QUÉ VE? INTERPRETE EL HISTOGRAMA CON SUS PALABRAS.*"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "> ###### **RESPUESTA**"
    ]
   },
   {
@@ -643,6 +637,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "**EL HISTOGRAMA MUETRA UNA DISTRIBUCIÓN NORMAL, SE OBSERVA QUE SE TIENE UNA MEDIA DE 20, SIN EMBARGO SE DESTACA UNA MODA EN VALORES DE 19 Y 21, DE IGUAL MANERA SE BASA EN UN RANGO DE VALORES ENTRE 14 A 26**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Reto\n",
     "\n",
     "Instrucciones:\n",
@@ -652,13 +653,6 @@
     "*INTERPRETE EL HISTOGRAMA ANTERIOR DE LAS MUESTRAS de y*\n",
     "\n",
     "*¿QUÉ VES? COMPARA AMBOS HISTOGRAMAS. EXPLIQUE BREVEMENTE LO QUE CREE QUE SUCEDIÓ.*"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "> ###### **RESPUESTA**"
    ]
   },
   {
@@ -685,6 +679,13 @@
     "ymean.plot()\n",
     "y.plot()\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**DE ACUERDO AL HISTOGRAMA Y & YMEAN TIENEN LA MISMA MEDIA EN UN VALOR DE 20, LA DENSIDAD DE SUS VALORES SE VE CON UNA ALTA DIFERENCIA YA QUE AMBAS VARIABLES SE ENCUENTRAN EN DIFERENTES RANGOS, UNO DE VALORES ENTRE 10 A 30 Y OTRO DE -10 A 50**"
    ]
   },
   {
@@ -730,31 +731,6 @@
     "Aunque la CLT dice que la media de una muestra se comporta como normal, se ha encontrado que la CLT es más consistente con la distribución de probabilidad t-Student. En realidad, la distribución t-Student es muy, muy similar (casi la misma) a la distribución normal cuando el tamaño de la muestra es mayor que 30. Pero para muestras pequeñas, t-Student hace un trabajo mucho mejor en representar lo que sucede con la CLT para muestras pequeñas en comparación con la distribución normal z.\n",
     "\n",
     "*La prueba de hipótesis para comparar la media de una variable con un valor o con otra media se denomina prueba t.*"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Reto\n",
-    "Instrucciones:\n",
-    "\n",
-    "Recopilar datos reales para acciones de Microsoft (MSFT) y realizar una prueba de hipótesis para ver si la media de las devoluciones de cc mensuales de Microsoft es mayor que cero.\n",
-    "\n",
-    "Ejecute una prueba t para comparar si el retorno medio de MSFT es mayor que cero.\n",
-    "\n",
-    "Realizar una prueba de hipótesis:\n",
-    "1. DEFINA LA VARIABLE DEL ESTUDIO. En este caso será la media de MSFT cc devuelve\n",
-    "\n",
-    "2. ESCRIBIR el NULL Y LA HIPÓTESIS ALTERNATIVA. \n",
-    "\n",
-    "3. CALCULAR EL ERROR ESTÁNDAR, QUE ES LA DESVIACIÓN ESTÁNDAR DE LA VARIABLE DE ESTUDIO.\n",
-    "\n",
-    "4. CALCULAR LA estadística t (valor t). EXPLICAR/INTERPRETAR la estadística t.\n",
-    "\n",
-    "5. CALCULAR EL INTERVALO DE CONFIANZA del 95% DE LA MEDIA DE LA MUESTRA\n",
-    "\n",
-    "6. ESCRIBA LA CONCLUSIÓN DE LA PRUEBA t."
    ]
   }
  ],
