--- a/Statistics/A01369984_BCase.ipynb
+++ b/Statistics/A01369984_BCase.ipynb
@@ -3299,7 +3299,7 @@
     ">###### Para cada variable independiente debe comprobar si hay valores atípicos y realizar los ajustes correspondientes para evitar resultados no fiables en el modelo de regresión.\n",
     "\n",
     ">###### Debe comprobar si existen posibles problemas de multicolinealidad. Explique brevemente qué es multicolinealidad, ejecute e interprete la prueba correspondiente.\n",
-    "**MULTICOLINEALIDAD - HACE REFERENCIA A LA ALTA CORRELACIÓN ENTRE MÁS DE DOS VARIABLES EXPLICATIVAS (VARIABLES INDEPENDIENTES)**\n",
+    "**MULTICOLINEALIDAD - HACE REFERENCIA A LA ALTA CORRELACIÓN ENTRE MÁS DE DOS VARIABLES EXPLICATIVAS (VARIABLES INDEPENDIENTES). La multicolinealidad infla la varianza y el error de tipo II. Hace que el coeficiente de una variable sea consistente pero poco confiable.**\n",
     "\n",
     ">###### Interpretar el modelo. Interpretar los resultados de cada coeficiente (beta y su significación estadística). Interpretar el R-cuadrado del modelo.\n",
     "\n",
@@ -3977,166 +3977,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 270,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>F1_ret</th>\n",
-       "      <th>EPSP</th>\n",
-       "      <th>Sales Annual G</th>\n",
-       "      <th>OPG</th>\n",
-       "      <th>OPM</th>\n",
-       "      <th>Book to Market Ratio</th>\n",
-       "      <th>SFL</th>\n",
-       "      <th>LFL</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>F1_ret</th>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>EPSP</th>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Sales Annual G</th>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>OPG</th>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>OPM</th>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Book to Market Ratio</th>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>SFL</th>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>LFL</th>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                      F1_ret   EPSP  Sales Annual G    OPG    OPM  \\\n",
-       "F1_ret                  True  False           False  False  False   \n",
-       "EPSP                   False   True           False  False   True   \n",
-       "Sales Annual G         False  False            True  False  False   \n",
-       "OPG                    False  False           False   True  False   \n",
-       "OPM                    False   True           False  False   True   \n",
-       "Book to Market Ratio    True   True           False  False  False   \n",
-       "SFL                    False  False           False  False   True   \n",
-       "LFL                    False   True           False  False   True   \n",
-       "\n",
-       "                      Book to Market Ratio    SFL    LFL  \n",
-       "F1_ret                                True  False  False  \n",
-       "EPSP                                  True  False   True  \n",
-       "Sales Annual G                       False  False  False  \n",
-       "OPG                                  False  False  False  \n",
-       "OPM                                  False   True   True  \n",
-       "Book to Market Ratio                  True  False   True  \n",
-       "SFL                                  False   True  False  \n",
-       "LFL                                   True  False   True  "
-      ]
-     },
-     "execution_count": 270,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "US_Firms[[\"F1_ret\",\"EPSP\",\"Sales Annual G\",\"OPG\",\"OPM\",\"Book to Market Ratio\",\"SFL\",\"LFL\"]].corr(method='pearson')>0.85"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 269,
    "metadata": {},
    "outputs": [
@@ -4260,13 +4100,21 @@
     "\n",
     "vifData[\"VIF\"] = [variance_inflation_factor(vif.values, i) for i in range(len(vif.columns))]\n",
     "\n",
-    "vifData\n",
-    "\n"
+    "vifData"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**El factor de inflación de la varianza se utiliza para detectar la gravedad de la multicolinealidad. VIF mide el número de variaciones infladas causadas por la multicolinealidad.**\n",
+    "\n",
+    "**Dado que la multicolinealidad infla la varianza de los coeficientes, es fundamental detectarla y corregirla. Esto implica eliminar una (o más) de las variables altamente correlacionadas**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 264,
+   "execution_count": 282,
    "metadata": {},
    "outputs": [
     {
@@ -4279,7 +4127,7 @@
       "Model:                            OLS   Adj. R-squared:                  0.763\n",
       "Method:                 Least Squares   F-statistic:                 1.742e+05\n",
       "Date:                Sun, 11 Sep 2022   Prob (F-statistic):               0.00\n",
-      "Time:                        03:57:51   Log-Likelihood:            -1.1673e+05\n",
+      "Time:                        05:39:14   Log-Likelihood:            -1.1673e+05\n",
       "No. Observations:              323816   AIC:                         2.335e+05\n",
       "Df Residuals:                  323809   BIC:                         2.335e+05\n",
       "Df Model:                           6                                         \n",
@@ -4324,12 +4172,32 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "- **EL EFECTO DE** ***Earning per share*** **EN LOS RETORNOS ANUALES ES POSITIVO Y SIGNIFICATIVA**. **POR UNA UNIDAD QUE CAMBIA EL** ***Earning per share***, **LOS RETORNOS SE MODIFICAN EN PROMEDIO** ***0.0474*** **LO QUE EQUIVALE EN PORCENTAJE A** ***4.74%*** **ANUAL.**\n",
+    "\n",
+    "- **EL EFECTO DE** ***Sales Annual Growth*** **EN LOS RETORNOS ANUALES ES POSITIVO Y SIGNIFICATIVA**. **POR UNA UNIDAD QUE CAMBIA EL** ***Sales Annual Growt***, **LOS RETORNOS SE MODIFICAN EN PROMEDIO** ***0.0608*** **LO QUE EQUIVALE EN PORCENTAJE A** ***6.08%*** **ANUAL.**\n",
+    "\n",
+    "- **EL EFECTO DEL** ***Operating profit margin*** **EN LOS RETORNOS ANUALES ES POSITIVO SIN EMBARGO NO ES SIGNIFICATIVA**. **POR UNA UNIDAD QUE CAMBIA EL** ***Operating profit margin***, **LOS RETORNOS SE MODIFICAN EN PROMEDIO** ***0.0200*** **LO QUE EQUIVALE EN PORCENTAJE A** ***2%*** **ANUAL.**\n",
+    "\n",
+    "- **EL EFECTO DEL** ***Book to market ration*** **EN LOS RETORNOS ANUALES ES POSITIVO Y SIGNIFICATIVA**. **POR UNA UNIDAD QUE CAMBIA EL** ***Book to market ratio***, **LOS RETORNOS SE MODIFICAN EN PROMEDIO** ***0.2043*** **LO QUE EQUIVALE EN PORCENTAJE A** ***20.43%*** **ANUAL.**\n",
+    "\n",
+    "- **EL EFECTO DEL** ***Short financial leverage*** **EN LOS RETORNOS ANUALES ES NEGATIVA Y SIGNIFICATIVA**. **POR UNA UNIDAD QUE CAMBIA EL** ***Short financial leverage***, **LOS RETORNOS SE MODIFICAN NEGATIVAMENTE EN PROMEDIO** ***0.3644*** **LO QUE EQUIVALE EN PORCENTAJE A** ***36.44%*** **ANUAL.**\n",
+    "\n",
+    "- **EL EFECTO DEL** ***Long financial leveragee*** **EN LOS RETORNOS ANUALES ES POSITIVO, SIN EMBARGO NO ES SIGNIFICATIVA**. **POR UNA UNIDAD QUE CAMBIA EL** ***Long financial leverage***, **LOS RETORNOS SE MODIFICAN EN PROMEDIO** *** 0.1661*** **LO QUE EQUIVALE EN PORCENTAJE A** ***16.61%*** **ANUAL.**\n",
+    "\n",
+    "\n",
+    "**DEBIDO A LA EXISTENCIA DE MULTICOLINEARIDAD SIGNIFICATIVA ENTRE LAS VARIABLES QUE POSEEN UN VALOR DE VIF MAYOR A 20 ES NECESARIO ELIMINARLAS, YA QUE PODEMOS TENER PREDICCIONES NO CONFIABLES PARA DESCRIBIR LA RENTABILIDAD DE LAS EMPRESAS. SIN CONSIDERAR EL EPSP YA QUE MUESTRA SIGNIFICATIVA EN LOS RETORNOS**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "**INTERPRETACIÓN**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 254,
+   "execution_count": 283,
    "metadata": {},
    "outputs": [
     {
@@ -4338,26 +4206,27 @@
      "text": [
       "                            OLS Regression Results                            \n",
       "==============================================================================\n",
-      "Dep. Variable:                 F1_ret   R-squared:                       0.693\n",
-      "Model:                            OLS   Adj. R-squared:                  0.693\n",
-      "Method:                 Least Squares   F-statistic:                 3.650e+05\n",
+      "Dep. Variable:                 F1_ret   R-squared:                       0.694\n",
+      "Model:                            OLS   Adj. R-squared:                  0.694\n",
+      "Method:                 Least Squares   F-statistic:                 2.453e+05\n",
       "Date:                Sun, 11 Sep 2022   Prob (F-statistic):               0.00\n",
-      "Time:                        03:47:15   Log-Likelihood:            -1.5907e+05\n",
-      "No. Observations:              323816   AIC:                         3.181e+05\n",
-      "Df Residuals:                  323813   BIC:                         3.182e+05\n",
-      "Df Model:                           2                                         \n",
+      "Time:                        05:39:28   Log-Likelihood:            -1.5817e+05\n",
+      "No. Observations:              323816   AIC:                         3.163e+05\n",
+      "Df Residuals:                  323812   BIC:                         3.164e+05\n",
+      "Df Model:                           3                                         \n",
       "Covariance Type:            nonrobust                                         \n",
       "==================================================================================\n",
       "                     coef    std err          t      P>|t|      [0.025      0.975]\n",
       "----------------------------------------------------------------------------------\n",
-      "const              0.0966      0.001     83.669      0.000       0.094       0.099\n",
-      "EPSP               0.2401      0.001    325.106      0.000       0.239       0.242\n",
-      "Sales Annual G     0.1995      0.001    204.913      0.000       0.198       0.201\n",
+      "const              0.0783      0.001     63.740      0.000       0.076       0.081\n",
+      "EPSP               0.2203      0.001    252.787      0.000       0.219       0.222\n",
+      "Sales Annual G     0.1941      0.001    198.201      0.000       0.192       0.196\n",
+      "SFL                0.3621      0.009     42.457      0.000       0.345       0.379\n",
       "==============================================================================\n",
-      "Omnibus:                    38996.143   Durbin-Watson:                   0.675\n",
-      "Prob(Omnibus):                  0.000   Jarque-Bera (JB):           262994.897\n",
-      "Skew:                           0.380   Prob(JB):                         0.00\n",
-      "Kurtosis:                       7.349   Cond. No.                         5.79\n",
+      "Omnibus:                    40578.757   Durbin-Watson:                   0.664\n",
+      "Prob(Omnibus):                  0.000   Jarque-Bera (JB):           255288.614\n",
+      "Skew:                           0.436   Prob(JB):                         0.00\n",
+      "Kurtosis:                       7.262   Cond. No.                         40.2\n",
       "==============================================================================\n",
       "\n",
       "Notes:\n",
@@ -4366,8 +4235,9 @@
     }
    ],
    "source": [
+    "# Modelado\n",
     "# Getting x and y parameters for the model prediction\n",
-    "x = US_Firms[[\"EPSP\",\"Sales Annual G\"]]\n",
+    "x = US_Firms[[\"EPSP\",\"Sales Annual G\",\"SFL\"]]\n",
     "y = US_Firms['F1_ret']\n",
     "\n",
     "# Getting information to interpret a model\n",
@@ -4382,7 +4252,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**INTERPRETACIÓN**"
+    "**DESPUÉS DE LAS MODIFICACIONES EN LA REGRESIÓN SE PUEDE DESTACAR QUE:**\n",
+    "\n",
+    "- **EL EFECTO DE** ***Earning per share*** **EN LOS RETORNOS ANUALES ES POSITIVO Y SIGNIFICATIVA**. **POR UNA UNIDAD QUE CAMBIA EL** ***Earning per share***, **LOS RETORNOS SE MODIFICAN EN PROMEDIO** ***0.2203*** **LO QUE EQUIVALE EN PORCENTAJE A** ***22.03%*** **ANUAL.**\n",
+    "\n",
+    "- **EL EFECTO DE** ***Sales Annual Growth*** **EN LOS RETORNOS ANUALES ES POSITIVO Y SIGNIFICATIVA**. **POR UNA UNIDAD QUE CAMBIA EL** ***Sales Annual Growt***, **LOS RETORNOS SE MODIFICAN EN PROMEDIO** ***0.1941*** **LO QUE EQUIVALE EN PORCENTAJE A** ***19.41%*** **ANUAL.**\n",
+    "\n",
+    "- **EL EFECTO DEL** ***Short financial leverage*** **EN LOS RETORNOS ANUALES ES POSITIVA Y SIGNIFICATIVA**. **POR UNA UNIDAD QUE CAMBIA EL** ***Short financial leverage***, **LOS RETORNOS SE MODIFICAN EN PROMEDIO** ***0.3621*** **LO QUE EQUIVALE EN PORCENTAJE A** ***36.21%*** **ANUAL.**"
    ]
   }
  ],
