--- a/Statistics/A01369984_BCase.ipynb
+++ b/Statistics/A01369984_BCase.ipynb
@@ -713,10 +713,8 @@
    "metadata": {},
    "source": [
     ">###### Por industria, ¿cuál es la composición de las empresas públicas estadounidenses en términos de tamaño de la empresa, rendimiento de las ventas y rentabilidad?\n",
-    "###### **RESPUESTA.**\n",
     "\n",
-    ">###### ¿Por qué algunas empresas son más rentables que otras? ¿Qué factores/variables de los estados financieros están relacionados con los rendimientos de las acciones?\n",
-    "###### **RESPUESTA.**"
+    ">###### ¿Por qué algunas empresas son más rentables que otras? ¿Qué factores/variables de los estados financieros están relacionados con los rendimientos de las acciones?"
    ]
   },
   {
