--- a/Statistics/A01369984_BCase.ipynb
+++ b/Statistics/A01369984_BCase.ipynb
@@ -713,8 +713,12 @@
    "metadata": {},
    "source": [
     ">###### Por industria, ¿cuál es la composición de las empresas públicas estadounidenses en términos de tamaño de la empresa, rendimiento de las ventas y rentabilidad?\n",
+    "**EN TÉRMINOS DE TAMAÑO LAS EMPRESAS PÚBLICAS ESTADOUNIDENSES ESTÁN COMPUESTAS POR VALOR DE MERCADO Y/O VALOR CONTABLE. ESTOS TERMINOS SON OBTENIDOS MEDIANTE CALCULOS COMO ACTIVOS TOTALES Y PASIVOS TOTALES (VALOR CONTABLE) Y VALORES HISTÓRICOS PRECIO * NÚMERO DE ACCIONES (VALOR DE MERCADO).**\n",
     "\n",
-    ">###### ¿Por qué algunas empresas son más rentables que otras? ¿Qué factores/variables de los estados financieros están relacionados con los rendimientos de las acciones?"
+    "**LA RENTABILIDAD ESTÁ DADA POR VALORES COMO INGRESOS, BENEFICIOS ANTES DE INTERESES E IMPUESTOS (EBIT), COSTES VARIABLES, VENTAS Y GASTOS ADMINISTRATIVOS, ETC.**\n",
+    "\n",
+    ">###### ¿Por qué algunas empresas son más rentables que otras? ¿Qué factores/variables de los estados financieros están relacionados con los rendimientos de las acciones?\n",
+    "**PARA DEFINIR LA RENTABILIDAD DE UNA EMPRESA SE CONSIDERAN DIVERSOS FACTORES, COMO LO SON: EL TAMAÑO DE LA EMPRESA, EL TIPO DE INDUSTRIA, INGRESOS E INGRESOS NETOS, MARGEN DE BENEFICIOS, GASTOS FINANCIEROS, ETC.**"
    ]
   },
   {
@@ -1586,8 +1590,7 @@
     "\n",
     "> ###### ¿Cuánto cambian estas variables dentro de cada industria? \n",
     "\n",
-    "> ###### ¿Cómo se distribuye el tamaño de la empresa (en valor de mercado)?\n",
-    "**RESPUESTA.**"
+    "> ###### ¿Cómo se distribuye el tamaño de la empresa (en valor de mercado)?"
    ]
   },
   {
@@ -1936,6 +1939,13 @@
     ">###### ¿Qué puede decir sobre el margen de beneficio de las empresas? \n",
     ">###### a) estadísticas descriptivas del margen de beneficios \n",
     ">###### b) gráfico(s) para ilustrar cómo cambia el margen de beneficios entre las industrias."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**EL MARGEN DE BENEFICIOS INDICA CUÁNTO BENEFICIO OBTIENE UNA EMPRESA DESPUÉS DE DIFERENTES PAGOS. UN VALOR ALTO INDICA QUE LA EMPRESA ESTÁ GANANDO SUFICIENTE DINERO PARA PAGAR LOS COSTES.**"
    ]
   },
   {
@@ -2492,10 +2502,10 @@
     "Considerando todo el historial de datos financieros de todas las empresas:\n",
     "\n",
     ">###### ¿Cómo se puede medir la rentabilidad de las empresas que se puede utilizar para comparar el rendimiento entre empresas de diferentes tamaños? Seleccionar y justificar al menos 3 medidas y mostrar estadísticas descriptivas\n",
-    " **RESPUESTA.**\n",
+    " **LA RENTABILIDAD ES LA CAPACIDAD DE LAS EMPRESAS PARA GENERAR GANANCIAS EN RELACIÓN CON SUS INGRESOS Y OTROS GASTOS O COSTOS.**\n",
     "\n",
     ">###### Calcular y explicar las ganancias por acción deflactadas por precio.\n",
-    "**RESPUESTA.**"
+    "**LAS GANANCIAS POR ACCIÓN SON LOS INGRESOS NETOS, DIVIDIDOS POR EL NÚMERO DE ACCIONES. ESTA MEDIDA ES LA CANTIDAD DE GANANCIAS QUE CADA $1 DEL VALOR DE MERCADO PODRÍA RECIBIR COMO GANANCIA.**"
    ]
   },
   {
@@ -2505,8 +2515,7 @@
     "Utilizando su subconjunto de empresas que pertenecen a su sector\n",
     "> ###### ¿qué factores (variables) podrían estar relacionados con la rentabilidad anual de las acciones en un trimestre en el futuro? \n",
     "Seleccione al menos 3 factores y explique brevemente.\n",
-    "> ###### ¿por qué cree que podrían estar relacionados con la rentabilidad de las acciones?.\n",
-    "**RESPUESTA.**"
+    "> ###### ¿por qué cree que podrían estar relacionados con la rentabilidad de las acciones?."
    ]
   },
   {
