--- a/Statistics/A01369984_BCaseCorr.ipynb
+++ b/Statistics/A01369984_BCaseCorr.ipynb
@@ -2895,7 +2895,8 @@
    "source": [
     "US_Firms_Modeling = US_Firms.copy()\n",
     "#Earning per share:\n",
-    "US_Firms_Modeling[\"EPSP\"] = US_Firms_Modeling['Net Income'] / US_Firms_Modeling[\"sharesoutstanding\"]\n",
+    "US_Firms_Modeling[\"EPS\" = US_Firms_Modeling['Net Income'] / US_Firms_Modeling[\"sharesoutstanding\"]\n",
+    "US_Firms_Modeling[\"EPSP\"] = US_Firms_Modeling['EPS'] / US_Firms_Modeling[\"originalprice\"]\n",
     "\n",
     "#Sales annual growth\n",
     "US_Firms_Modeling[\"Sales Annual G\"] = (US_Firms_Modeling[\"revenue\"] / (US_Firms_Modeling[\"revenue\"].shift(-4)))-1\n",
