--- a/Statistics/A01369984_BCaseCorr.ipynb
+++ b/Statistics/A01369984_BCaseCorr.ipynb
@@ -4078,9 +4078,7 @@
    "source": [
     "- **EL EFECTO DE** ***Earning per share*** **EN LOS RETORNOS ANUALES ES POSITIVO Y SIGNIFICATIVA**. **POR UNA UNIDAD QUE CAMBIA EL** ***Earning per share***, **LOS RETORNOS SE MODIFICAN EN PROMEDIO** ***0.3681*** **LO QUE EQUIVALE EN PORCENTAJE A** ***36.81%*** **ANUAL.**\n",
     "\n",
-    "- **EL EFECTO DEL** ***Book to market ration*** **EN LOS RETORNOS ANUALES ES NEGATIVA Y SIGNIFICATIVA**. **POR UNA UNIDAD QUE CAMBIA EL** ***Book to market ratio***, **LOS RETORNOS SE MODIFICAN EN PROMEDIO** ***0.1669*** **LO QUE EQUIVALE EN PORCENTAJE A** ***16.69%*** **ANUAL.**\n",
-    "\n",
-    "**DEBIDO A LA EXISTENCIA DE MULTICOLINEARIDAD SIGNIFICATIVA ENTRE LAS VARIABLES QUE POSEEN UN VALOR DE VIF MUY ELEVADO ES NECESARIO ELIMINARLAS, YA QUE PODEMOS TENER PREDICCIONES NO CONFIABLES PARA DESCRIBIR LA RENTABILIDAD DE LAS EMPRESAS. SIN CONSIDERAR EL EPSP YA QUE MUESTRA SIGNIFICATIVA EN LOS RETORNOS**"
+    "- **EL EFECTO DEL** ***Book to market ration*** **EN LOS RETORNOS ANUALES ES NEGATIVA Y SIGNIFICATIVA**. **POR UNA UNIDAD QUE CAMBIA EL** ***Book to market ratio***, **LOS RETORNOS SE MODIFICAN EN PROMEDIO** ***0.1669*** **LO QUE EQUIVALE EN PORCENTAJE A** ***16.69%*** **ANUAL.**"
    ]
   }
  ],
